Imagotype improved and header done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header__imagotype">
+            <img src="./assets/images/isotype.png" alt="Bitcoin City Isotype">
+            <img src="./assets/images/logotype.png" alt="Bitcoin City Logotype">
+        </div>
+        <div class="header__headline">
+            <h1>The next evolution of cities.</h1>
+            <p>Bitcoin City will be changing the world. Bit a bit we're building the new economic era.</p>
+            <a href="" class="header__button">Know its features <span></span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
