Base structure of the model section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="model__container">
+            <div class="model__backgroung-image"></div>
+            <div class="model__headline">
+                <h2></h2>
+                <p></p>
+            </div>
+            <section class="model__table">
+                <div></div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
