Tab seetting in 2 spaces and variables css for spacing and line-heights

--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bitcoin City</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;1,700&family=Trirong:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;1,700&family=Trirong:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+
+  <body>
     <header>
-        <div class="header__imagotype">
-            <img src="./assets/images/isotype.png" alt="Bitcoin City Isotype">
-            <img src="./assets/images/logotype.png" alt="Bitcoin City Logotype">
-        </div>
-        <div class="header__headline">
-            <h1>The next evolution of cities.</h1>
-            <p>Bitcoin City will be changing the world. Bit a bit we're building the new economic era.</p>
-            <a href="" class="header__button">Know its features <span></span></a>
-        </div>
+      <div class="header__imagotype">
+        <img src="./assets/images/isotype.png" alt="Bitcoin City Isotype" />
+        <img src="./assets/images/logotype.png" alt="Bitcoin City Logotype" />
+      </div>
+      <article class="header__headline">
+        <h1>The next evolution of cities</h1>
+        <p>
+          Bitcoin City will be changing the world. Bit a bit we're building the
+          new economic era.
+        </p>
+        <a href="" class="header__button">Know its features <span></span></a>
+      </article>
     </header>
     <main>
-        <section class="model__container">
-            <div class="model__backgroung-image"></div>
-            <div class="model__headline">
-                <h2></h2>
-                <p></p>
-            </div>
-            <section class="model__table">
-                <div></div>
-            </section>
+      <section class="model__container">
+        <div class="model__backgroung-image"></div>
+        <div class="model__headline">
+          <h2></h2>
+          <p></p>
+        </div>
+        <section class="model__table">
+          <div></div>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
