Structuring and styling for model section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <header>
       <div class="header__imagotype">
-        <img src="./assets/images/isotype.png" alt="Bitcoin City Isotype" />
-        <img src="./assets/images/logotype.png" alt="Bitcoin City Logotype" />
+        <img src="./assets/images/isotype.svg" alt="Bitcoin City Isotype" />
+        <img src="./assets/images/logotype.svg" alt="Bitcoin City Logotype" />
       </div>
       <article class="header__headline">
         <h1>The next evolution of cities</h1>
@@ -31,10 +31,14 @@
     </header>
     <main>
       <section class="model__container">
-        <div class="model__backgroung-image"></div>
+        <div class="model__background-image"></div>
         <div class="model__headline">
-          <h2></h2>
-          <p></p>
+          <h2>A planned city</h2>
+          <p>
+            The city has been designed to attract investors from all over the
+            world, and, in addition, turn it into a megacenter of cryptocurrency
+            operations and be visited by foreign and national tourists.
+          </p>
         </div>
         <section class="model__table">
           <div></div>
